feat: http methods only allow get and post
